--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -60,6 +60,14 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
+      - name: Generate Test Report
+        run: ./gradlew test jacocoTestReport
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew build sonar --info
+
       - name: Analyze with SonarCloud
 
         # You can pin the exact commit or the version.
