--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -69,7 +69,6 @@ jobs:
         run: ./gradlew build sonar --info
 
       - name: Analyze with SonarCloud
-
         # You can pin the exact commit or the version.
         uses: SonarSource/sonarcloud-github-action@master
         env:
@@ -86,7 +85,7 @@ jobs:
             -Dsonar.java.binaries=.
             -Dsonar.sources=src/main/java
             -Dsonar.tests=src/test/java
-            # -Dsonar.coverage.jacoco.htmlReportPaths=build/reports/jacoco/html/index.html
+            -Dsonar.coverage.jacoco.htmlReportPaths=build/reports/jacoco/html/index.html
 
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
